# Application-Schoolar

./: README.md  admin.py  db.sqlite3  manage.py  models.py  pyproject.toml  urls.py  utils.py  views.py
core/migrations/: 0001_initial.py  0002_add_initial_data.py
core/templates/core/: base.html  etudiant_bulletin.html  prof_dashboard.html  prof_note_list.html
smart_schoolar/: asgi.py  settings.py  urls.py  wsgi.py
templates/core/: etudiant_dashboard.html  etudiant_note.html  etudiant_releve_pdf.html  login.html  prof_add_note.html  prof_edit_note.html
templatetags/: filters.py
