[tool.poetry]
name = "smart-schoolar"
version = "0.1.0"
description = ""
authors = ["..."]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.2.3"
django-tailwind = "^4.0.1"
weasyprint = "^65.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
